<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <TextView
      android:id="@+id/tvForgotPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:clickable="true"
      android:focusable="true"
      android:onClick="goRecoverPassword"
      android:text="@string/forgot_password_question"
      android:textColor="@color/primary_color"
      android:textSize="@dimen/text_size"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textFieldPassword"
      tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

  <TextView
      android:id="@+id/tvSignIn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      android:text="@string/sign_in"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textFieldEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/email_label"
      app:endIconMode="clear_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvSignIn">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        tools:ignore="TextContrastCheck" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textFieldPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="26dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/password_label"
      app:endIconMode="password_toggle"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textFieldEmail">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        tools:ignore="TextContrastCheck" />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/buttonDone"
      android:layout_width="fill_parent"
      android:layout_height="@dimen/button_height"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      android:backgroundTint="@color/primary_color"
      android:text="@string/sign_in"
      android:textAllCaps="true"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
      tools:ignore="TextContrastCheck" />

  <TextView
      android:id="@+id/tvNoAccount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:text="@string/no_account"
      android:textColor="@color/secondary_color"
      android:textSize="@dimen/text_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonDone"
      tools:ignore="TextContrastCheck" />

  <TextView
      android:id="@+id/tvRegister"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="5dp"
      android:layout_marginTop="32dp"
      android:clickable="true"
      android:focusable="true"
      android:onClick="goRegister"
      android:text="@string/register"
      android:textColor="@color/primary_color"
      android:textSize="@dimen/text_size"
      app:layout_constraintStart_toEndOf="@+id/tvNoAccount"
      app:layout_constraintTop_toBottomOf="@+id/buttonDone"
      tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="200dp"
      android:layout_height="45dp"
      android:layout_marginTop="80dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvNoAccount">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/facebook"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/twitter"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/chrome"
        tools:ignore="ContentDescription,ImageContrastCheck" />
  </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>